# bespoke

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci-scan.yml  data-branch-heartbeat.yml  github-discovery-pages-daily.yml  github-repo-metadata-refresh.yml  github-seed-discovery-lane-3.yml  github-seed-discovery-lane-4.yml  github-seed-discovery-nightly-followup.yml  github-seed-discovery-nightly-long.yml  github-seed-discovery.yml  self-commit-proof.yml
ci/: hourly-data-proof.txt  self-commit-proof.txt
data/derived/: embedding-units.jsonl
data/frontier/: repos.json
data/runs/: 20260417T125006Z.json  20260417T165141Z.json  20260417T180443Z.json  20260418T024124Z.json  20260418T032622Z.json  20260418T034201Z.json  20260418T035057Z.json  20260418T035446Z.json  20260418T043851Z.json  20260418T044433Z.json  20260418T090930Z.json  20260418T091017Z.json  20260418T091135Z.json  20260418T091712Z.json  20260418T092102Z.json  20260418T092219Z.json  20260418T092305Z.json  20260418T092347Z.json  20260418T094512Z.json  20260418T095006Z.json  20260418T095717Z.json  20260418T102553Z.json  20260418T103837Z.json  20260418T104338Z.json  20260418T112414Z.json  20260418T113222Z.json  20260418T114143Z.json  20260418T115619Z.json  20260418T115737Z.json  20260418T120606Z.json  20260418T120711Z.json  20260418T124659Z.json  (+262 more)
scripts/: build_discovery_pages.py  github_seed_discovery.py  refresh_repo_metadata.py
tests/: test_embedding_pipeline.py  test_github_seed_discovery.py  test_vocabulary_pipeline.py
vocabulary/: concept-buckets.json
(+269398 files in other folders)
